--- a/index.html
+++ b/index.html
@@ -553,8 +553,7 @@
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    Да, может, так как наше агентство полностью уважает желание всех девушек. Если по какой-нибудь причине девушка отказывается от выполнения услуг, то ей просто необходимо позвонить по телефону или отправить сообщение о том, что она отказывается. Поэтому,
-                                    прежде чем идти на работу в эскорт-агентство стоит много раз подумать, осилите ли вы эту работу.
+                                    Да, может, так как наше агентство полностью уважает желание всех девушек.
                                 </div>
                             </div>
                         </div>
