upgrade all doc

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <body>
     <!--::header part start::-->
-    <header class="main_menu home_menu">
+    <!-- <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
@@ -31,14 +31,7 @@
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
                         <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
                         <div class="row mob-menu-icons">
-                            <!--                        <a class="hh" type="button" href="#anketa">
-                          <img alt="" src="img/icon/test.svg">
-                      </a>
-                    <button class="navbar-toggler menu-icon" type="button" data-toggle="collapse"
-                              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                              aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                      </button> -->
+                            
                             <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -77,6 +70,57 @@
                         </div>
                     </nav>
                 </div>
+            </div>
+        </div>
+    </header> -->
+    <header class="main_menu home_menu">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-xl navbar-dark">
+                    <a class="d-none d-xl-block navbar-brand hh" href="#home">PREMIUM<span>ESCORT
+                        <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
+                    <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
+                    <div class="row mob-menu-icons">
+                        <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="container">
+                        <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
+                            <ul class="navbar-nav menu align-items-center">
+                                <li class="nav-item">
+                                    <a class="nav-link " href="index.html">Главная</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="about.html">Об агентстве</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="advantages.html">Почему мы?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="requirements.html">Требования</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="faq.html">FAQ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#reviews">Отзывы</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#contacts">Контакты</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="menu_right_block">
+                        <div class="hidden menu_right_item">
+                            <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
+                            <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
+                        </div>
+                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+
+                    </div>
+                </nav>
             </div>
         </div>
     </header>
@@ -208,7 +252,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <div class="section_tittle text-center">
+                    <div class="section_tittle text-center" id="contacts">
                         Контакты
                         <p style="color:#ececec;" class="text-center pb-4">Мы работаем без выходных с 9:00 до 19:00</p>
                     </div>
