--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
                     <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
                     <div class="row mob-menu-icons">
-                        <!--                        <a class="hh" type="button" href="#anketa">
-                          <img alt="" src="img/icon/test.svg">
-                      </a>
-                    <button class="navbar-toggler menu-icon" type="button" data-toggle="collapse"
-                              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                              aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                      </button> -->
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -61,10 +53,10 @@
                                     <a class="nav-link" href="faq.html">FAQ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link hh" href="#reviews">Отзывы</a>
+                                    <a class="nav-link" href="#reviews">Отзывы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link hh" href="#contacts">Контакты</a>
+                                    <a class="nav-link" href="#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
@@ -74,9 +66,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <!-- <a class="boot" data-toggle="modal" href="#ModalAnketa">Заполнить анкету</a> -->
-                        <a class="boot" href="#anketa">Заполнить анкету</a>
-
+                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
                     </div>
                 </nav>
             </div>
@@ -1058,7 +1048,7 @@
         </div>
     </div>
     <!-- Vertical NavBar start -->
-    <nav id="cd-vertical-nav">
+    <!-- <nav id="cd-vertical-nav">
         <ul>
             <li>
                 <a class="hh is-selected" href="#home" data-number="1">
@@ -1103,7 +1093,7 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
     <!-- Vertical NavBar end
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
