--- a/advantages.html
+++ b/advantages.html
@@ -22,7 +22,7 @@
 
 <body>
     <!--::header part start::-->
-    <header class="main_menu home_menu">
+    <!-- <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
@@ -30,15 +30,7 @@
                         <a class="d-none d-xl-block navbar-brand hh" href="#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
                         <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
-                        <div class="row mob-menu-icons">
-                            <!--                        <a class="hh" type="button" href="#anketa">
-                                                  <img alt="" src="img/icon/test.svg">
-                                              </a>
-                                            <button class="navbar-toggler menu-icon" type="button" data-toggle="collapse"
-                                                      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                                      aria-expanded="false" aria-label="Toggle navigation">
-                                                  <span class="navbar-toggler-icon"></span>
-                                              </button> -->
+                        <div class="row mob-menu-icons">                            
                             <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -77,6 +69,58 @@
                         </div>
                     </nav>
                 </div>
+            </div>
+        </div>
+    </header> -->
+    <header class="main_menu home_menu">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-xl navbar-dark">
+                    <a class="d-none d-xl-block navbar-brand hh" href="#home">PREMIUM<span>ESCORT
+                        <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
+                    <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
+                    <div class="row mob-menu-icons">
+                        <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                    <div class="container">
+                        <div class="collapse navbar-collapse main-menu-item justify-content-center" id="navbarSupportedContent">
+                            <ul class="navbar-nav menu align-items-center">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html">Главная</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html">Об агентстве</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="advantages.html">Почему мы?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="requirements.html">Требования</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="faq.html">FAQ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#reviews">Отзывы</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html#contacts">Контакты</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="menu_right_block">
+                        <div class="hidden menu_right_item">
+                            <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
+                            <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
+                        </div>
+                        <!-- <a class="boot" data-toggle="modal" href="#ModalAnketa">Заполнить анкету</a> -->
+                        <a class="boot" href="index.html#anketa">Заполнить анкету</a>
+
+                    </div>
+                </nav>
             </div>
         </div>
     </header>
@@ -203,7 +247,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8">
-                    <div class="section_tittle text-center">
+                    <div class="section_tittle text-center" id="reviews">
                         Отзывы
                         <p class="text-center">Комментарии наших моделей</p>
                     </div>
@@ -231,7 +275,8 @@
                         </div>
                         <div class="col-12 d-block d-sm-none">
                             <p>Как же я устала искать работу, где платили бы более или менее приличные деньги. Особенно сейчас все требуют образование и опыт в серьезной компании. Решила обратиться в агентство, где обещали помочь. Поначалу домашним не решилась
-                                ра<span id="dots1">...</span><span id="more1">ссказывать, чтобы не сглазить, вдруг все получится не так, как мне обещали. Спустя месяц посмелела и рассказала маме, она сначала ругалась, а потом успокоилась, ну где еще такие деньги заработать. Думаю о будущем, о семье, но пока нет своего жилья, собственную семью заводить нет смысла. Пробуйте и у вас получится, как говорится, кто не рискует… Ведь молодость одна и нужно позаботиться о том, как жить дальше. Все в ваших руках, девченки!</span>                                <a id="myBtn1" onclick="readMore('dots1' , 'more1' , 'myBtn1')">Показать полностью</a></p>
+                                ра
+                                <span id="dots1">...</span><span id="more1">ссказывать, чтобы не сглазить, вдруг все получится не так, как мне обещали. Спустя месяц посмелела и рассказала маме, она сначала ругалась, а потом успокоилась, ну где еще такие деньги заработать. Думаю о будущем, о семье, но пока нет своего жилья, собственную семью заводить нет смысла. Пробуйте и у вас получится, как говорится, кто не рискует… Ведь молодость одна и нужно позаботиться о том, как жить дальше. Все в ваших руках, девченки!</span>                                <a id="myBtn1" onclick="readMore('dots1' , 'more1' , 'myBtn1')">Показать полностью</a></p>
                         </div>
                     </div>
                 </div>
@@ -256,8 +301,7 @@
                         </div>
                         <div class="col-12 d-block d-sm-none">
                             <p>Современная жизнь диктует новые условия и способы выживания. Поэтому молодые и привлекательные девушки хотят воспользоваться дарами своей молодости и заработать хорошие деньги. За воплощением своей<span id="dots2">...</span>
-                                <span
-                                    id="more2"> мечты они идут в эскорт агентства. Сейчас многие циники скажут «Это проституция!». Спешу вас разочаровать, это не так. Эскорт — это сопровождение мужчины на званый обед или деловые переговоры. Причем мужчина относится к
+                                <span id="more2"> мечты они идут в эскорт агентства. Сейчас многие циники скажут «Это проституция!». Спешу вас разочаровать, это не так. Эскорт — это сопровождение мужчины на званый обед или деловые переговоры. Причем мужчина относится к
                                     высшему социальному слою населения, а девушка под стать ему — модельная ухоженная внешность, знание манер, разбор в психологии, знает, что и когда надо сказать. Интимные услуги оказываются только по согласованию обеих
                                     сторон и за отдельную плату.</span> <a id="myBtn2" onclick="readMore('dots2','more2','myBtn2')">Показать полностью</a></p>
                         </div>
@@ -284,10 +328,8 @@
                         </div>
                         <div class="col-12 d-block d-sm-none">
                             <p>Последнее время работа в эскорт-услугах всячески очерняется. О нас говорят, что мы не имеем ни морали, ни каких-то жизненных принципов, мол, так может каждый. Однако уже при работе с первым клиентом выясняется, что<span id="dots3">...</span>
-                                <span
-                                    id="more3"> дело это невероятно сложное. Вот так просто взять и отдаться незнакомому человеку, переступив через свой страх и эмоции. Нет, дорогие мои, так смогут не все. Да что уж там, я откровенно заявляю, что нужно быть смелой, рискнув
-                                    пойти к нам. Да, первое время тяжело, особенно разделять работу от «дома». Разделять понятие «по любви» и «по долгу». Но такие «психологические тонкости» — это только цветочки в нашей нелегкой профессии.</span> <a id="myBtn3"
-                                        onclick="readMore('dots3' , 'more3' , 'myBtn3')">Показать полностью</a></p>
+                                <span id="more3"> дело это невероятно сложное. Вот так просто взять и отдаться незнакомому человеку, переступив через свой страх и эмоции. Нет, дорогие мои, так смогут не все. Да что уж там, я откровенно заявляю, что нужно быть смелой, рискнув
+                                    пойти к нам. Да, первое время тяжело, особенно разделять работу от «дома». Разделять понятие «по любви» и «по долгу». Но такие «психологические тонкости» — это только цветочки в нашей нелегкой профессии.</span>                                <a id="myBtn3" onclick="readMore('dots3' , 'more3' , 'myBtn3')">Показать полностью</a></p>
                         </div>
                     </div>
                 </div>
@@ -313,7 +355,8 @@
                         </div>
                         <div class="col-12 d-block d-sm-none">
                             <p>Эскорт – бизнес! Не очень пыльная и денежная работка. Как в театре, у великой актрисы, есть возможность сыграть роль, где красивая и богатая жизнь. Но надо помнить всегда, это твоя всего лишь работа, а не развлечение или приятное
-                                пр<span id="dots4">...</span><span id="more4">иключение в жизни. Собранность, четкость в действиях, полнейший контроль над собой, нужное слово в нужный момент. Главное, ни увлекаться, ни влюбляться и не примерять на себя эту головокружительную жизнь. Не забывай: это обычная работа, как у всех людей. Тогда у тебя всё будет супер! И помни, вечно так работать не будешь, возрастные рамки существуют. Это временно! И бесплатный тебе совет: готовь запасной вариант, параллельно учись и приобретай специальность.</span>                                <a id="myBtn4" onclick="readMore('dots4' , 'more4' , 'myBtn4')">Показать полностью</a></p>
+                                пр
+                                <span id="dots4">...</span><span id="more4">иключение в жизни. Собранность, четкость в действиях, полнейший контроль над собой, нужное слово в нужный момент. Главное, ни увлекаться, ни влюбляться и не примерять на себя эту головокружительную жизнь. Не забывай: это обычная работа, как у всех людей. Тогда у тебя всё будет супер! И помни, вечно так работать не будешь, возрастные рамки существуют. Это временно! И бесплатный тебе совет: готовь запасной вариант, параллельно учись и приобретай специальность.</span>                                <a id="myBtn4" onclick="readMore('dots4' , 'more4' , 'myBtn4')">Показать полностью</a></p>
                         </div>
                     </div>
                 </div>
@@ -338,7 +381,8 @@
                         </div>
                         <div class="col-12 d-block d-sm-none">
                             <p>В эскорте мне довелось работать не слишком долго, но кое-какие выводы я для себя сделала. Во-первых, — рассуждать здраво и быть реалисткой. Любви здесь нет. Это из глобального и не поддающееся оспариванию. Во-вторых, — одеваться
-                                нуж<span id="dots5">...</span><span id="more5">но элегантно, а не вызывающе. Все-таки ваши задачи несколько иные, чем у куртизанок. Так же следует избегать использования губной помады и духов — ваш спутник может быть женат, и тогда, из-за нечаянных следов, у него могут быть проблемы. В-третьих, — отправляться на мероприятие лучше поужинав. Что бы не захмелеть от первого бокала и не потерять контроль. А последующие напитки должен предлагать сам мужчина.</span>                                <a id="myBtn5" onclick="readMore('dots5' , 'more5' , 'myBtn5')">Показать полностью</a></p>
+                                нуж
+                                <span id="dots5">...</span><span id="more5">но элегантно, а не вызывающе. Все-таки ваши задачи несколько иные, чем у куртизанок. Так же следует избегать использования губной помады и духов — ваш спутник может быть женат, и тогда, из-за нечаянных следов, у него могут быть проблемы. В-третьих, — отправляться на мероприятие лучше поужинав. Что бы не захмелеть от первого бокала и не потерять контроль. А последующие напитки должен предлагать сам мужчина.</span>                                <a id="myBtn5" onclick="readMore('dots5' , 'more5' , 'myBtn5')">Показать полностью</a></p>
                         </div>
                     </div>
                 </div>
