--- a/about.html
+++ b/about.html
@@ -77,9 +77,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand hh" href="#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
                     <div class="row mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
@@ -159,8 +159,8 @@
                 <span>Кто мы?</span>
                 <p>Мы - компания, оказывающая качественные услуги по предоставлению эскорт - услуг, а также подбору и предоставлению персонала в любых направлениях эскортного и модельного бизнеса, который станет для вас надежным партнером, а сотрудничество
                     с которым будет выгодным.</p><br>
-                <a class="boot btn hh" href="#about">Подробнее</a>
-                <a style="margin-left: 20px" class="boot btn d-none d-sm-inline-flex" href="advantages.html">Почему мы?</a>
+                <a class="boot " href="#about">Подробнее</a>
+                <a style="margin-left: 8px" class="boot " href="advantages.html">Почему мы?</a>
             </div>
         </div>
         <div class="head-mouse">
