--- a/advantages.html
+++ b/advantages.html
@@ -76,9 +76,9 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-xl navbar-dark">
-                    <a class="d-none d-xl-block navbar-brand hh" href="#home">PREMIUM<span>ESCORT
+                    <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
-                    <a class="d-xl-none navbar-brand-mob hh" href="#home">PREMIUM ESCORT</a>
+                    <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
                     <div class="row mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
@@ -161,8 +161,8 @@
                     по рекламе, фильтрации звонков, проведении переговоров, юридическая и силовая поддержка.</p>
                 <p class="d-block d-sm-none">Мы предлагаем хороших клиентов, высокую оплату, поддержку и безопасность. Почему эскорт агентство — это лучшее решение если вы решили заниматься эскортом? Да потому, что мы ваш надежный помощник, посредник и защитник.</p>
                 <br>
-                <a class="boot btn hh" href="#why">Подробнее</a>
-                <a style="margin-left: 20px" class="boot btn d-none d-sm-inline-flex" href="requirements.html">Требования</a>
+                <a class="boot" href="#why">Подробнее</a>
+                <a style="margin-left: 4px" class="boot" href="requirements.html">Требования</a>
             </div>
         </div>
         <div class="head-mouse">
