add form send message

--- a/index.html
+++ b/index.html
@@ -853,7 +853,9 @@
                         </div>
                     </div>
                     <input name="comm" placeholder="Сообщение..." type="text" required>
-                    <div style="color: white;" class="boot-center pt-3" id="messegeResult"><button class="boot" type="submit" onclick="ajaxFormRequest('messegeResult', 'fcontact', 'php/form-contact.php')">Отправить</button></div>
+                    <div style="color: white;" class="boot-center pt-3" id="messegeResult">
+                        <button class="boot">Отправить</button>
+                    </div>
                 </form>
             </div>
         </div>
