upd advantages.html

--- a/advantages.html
+++ b/advantages.html
@@ -79,7 +79,7 @@
                     <a class="d-none d-xl-block navbar-brand" href="index.html#home">PREMIUM<span>ESCORT
                         <div class="disc">ЭСКОРТ АГЕНТСТВО</div></span></a>
                     <a class="d-xl-none navbar-brand-mob" href="index.html#home">PREMIUM ESCORT</a>
-                    <div class="row mob-menu-icons">
+                    <div class="mob-menu-icons">
                         <button type="button" class="btn btn-link navbar-toggle collapsed menu-icon" data-toggle="modal" data-target="#menuModal" aria-controls="navbarSupportedContent" aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -116,9 +116,7 @@
                             <a class="info-contacts d-none d-lg-block" data-toggle="modal" href="#ModalPhones"><img alt="" src="img/icon/phone-call.svg"> +38 (067) 123 45 67</a>
                             <a class="order-callback" data-toggle="modal" href="#ModalCallback">Заказать звонок</a>
                         </div>
-                        <!-- <a class="boot" data-toggle="modal" href="#ModalAnketa">Заполнить анкету</a> -->
                         <a class="boot" href="index.html#anketa">Заполнить анкету</a>
-
                     </div>
                 </nav>
             </div>
