--- a/about.html
+++ b/about.html
@@ -286,7 +286,20 @@
             </div>
             <div class="text-center contact-tittle mt-5">Напиши нам</div>
             <div class="row justify-content-center text-center">
-                <form id="fcontact" class="col-md-8 col-sm-12 anketa" action='php/form-contact.php'>
+                <div id="fcontactAfterSend2" class="feature_part">
+                    <!-- <div class="container"> -->
+                    <div class="sendmess row justify-content-center">
+                        <div class="text-center">
+                            Спасибо! Сообщение успешно отправлено. <br> Мы скоро ответим.
+                        </div>
+                        <div style="color: white;" class="boot-center pt-3">
+                            <button class="boot" onclick="hideShowSection('fcontactAfterSend2', 'fcontact2')">Написать</button>
+                        </div>
+                    </div>
+
+                    <!-- </div> -->
+                </div>
+                <form id="fcontact2" class="col-md-8 col-sm-12 anketa">
                     <div class="row">
                         <div class="col">
                             <input name="name" placeholder="Имя" type="text" required>
@@ -296,7 +309,9 @@
                         </div>
                     </div>
                     <input name="comm" placeholder="Сообщение..." type="text" required>
-                    <div style="color: white;" class="boot-center pt-3" id="messegeResult"><button class="boot" type="submit" onclick="ajaxFormRequest('messegeResult', 'fcontact', 'php/form-contact.php')">Отправить</button></div>
+                    <div style="color: white;" class="boot-center pt-3">
+                        <button class="boot" onclick="ajaxFormRequest('fcontact2', 'php/form-contact.php')">Отправить</button>
+                    </div>
                 </form>
             </div>
         </div>
@@ -415,13 +430,14 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <div class="modal-title">Заказать звонок</div>
+                    <div class="modal-title">ЗАКАЗАТЬ ЗВОНОК</div>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
                     <form id="fcallback" class="contact-form">
-                        <div class="row">
+                        <div class="fcallInp">
                             <div class="col form-field col x-50">
                                 <input name="name" placeholder="Имя" type="text" required>
                             </div>
@@ -432,6 +448,7 @@
                         <div class="form-field col x-100 align-center">
                             <div id="callbackResult">
                                 <button class="boot" onclick="ajaxFormRequest('fcallback', 'php/form-callback.php')">Отправить</button>
+                                <p>Мы свяжемся с тобой в ближайшее время.</p>
                             </div>
                         </div>
                     </form>
