add class to requirements.css

--- a/requirements.html
+++ b/requirements.html
@@ -355,7 +355,7 @@
             <!-- Show after form send -->
             <div id="anketaAfterSend" class="feature_part">
                 <!-- <div class="container"> -->
-                <div class="sendmess row justify-content-center">
+                <div class="sendmess justify-content-center">
                     <div class="text-center">
                         Спасибо! Анкета успешно отправлена.
                         <p class="text-center">Если ты нам подходишь, мы обязательно свяжемся с тобой для обсуждения всех деталей.</p>
