add margin to styles

--- a/about.html
+++ b/about.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section_tittle text-center ">Напиши нам</div>
+            <div class="section_tittle text-center writeToUs">Напиши нам</div>
             <div class="row justify-content-center text-center">
                 <div id="fcontactAfterSend2" class="feature_part">
                     <!-- <div class="container"> -->
