--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                 </div>
             </div>
             <!-- <div class="text-center contact-tittle mt-5">Напиши нам</div> -->
-            <div id="writeToUs" class="section_tittle text-center">
+            <div id="writeToUs" class="writeToUs section_tittle text-center">
                 Напиши нам
             </div>
             <div class="row justify-content-center text-center">
