edited mobile menu and text of content

--- a/about.html
+++ b/about.html
@@ -179,13 +179,13 @@
             <div class="about-us-desc d-none d-sm-block justify-content-center">
                 В современном мире работа в эскорте одна из самых высокооплачиваемых и престижных, ведь таких девушек часто приравнивают к профессиональным моделям. Если девушка смогла побороть в себе чувство неловкости и обратилась в эскорт агентство, то, значит, то
                 она считает себя более или менее привлекательной, а это, уже хорошо. Наше эскорт агентство является одним из ведущих в Украине и имеет заслуженную популярность среди почитателей элитного эскорта. Многолетний опыт в сфере оказания эскорт
-                услуг не заставит вас сомневаться в нашем профиссионализме. Все модели Premium Escort работают с большим удовольствием, так как мы имеем широкую базу состоятельных клиентов и даем возможность зарабатывать немалые деньги. Также, стоит отметить,
+                услуг не заставит вас сомневаться в нашем профессионализме. Все модели Premium Escort работают с большим удовольствием, так как мы имеем широкую базу состоятельных клиентов и даем возможность зарабатывать немалые деньги. Также, стоит отметить,
                 что мы беспокоимся о наших моделях, предоставляя им надёжную защиту и полную конфиденциальность. Нашей задачей является помочь девушкам легко и безопасно заработать много денег.
             </div>
             <div class="about-us-desc d-block d-sm-none justify-content-center">
                 <p> В современном мире работа в эскорте одна из самых высокооплачиваемых и престижных, ведь таких девушек часто приравнивают к профессиональным моделям. Если девушка смогла побороть в себе чувство неловкости и обратилась в эскорт агентство,
                     то, значит, то она считает себя более или менее привлекательной, а это, уже хорошо.</p><br>
-                <p>Наше эскорт агентство является одним из ведущих в Украине и имеет заслуженную популярность среди почитателей элитного эскорта. Многолетний опыт в сфере оказания эскорт услуг не заставит вас сомневаться в нашем профиссионализме. Все модели
+                <p>Наше эскорт агентство является одним из ведущих в Украине и имеет заслуженную популярность среди почитателей элитного эскорта. Многолетний опыт в сфере оказания эскорт услуг не заставит вас сомневаться в нашем профессионализме. Все модели
                     Premium Escort работают с большим удовольствием, так как мы имеем широкую базу состоятельных клиентов и даем возможность зарабатывать немалые деньги.</p><br>
                 <p>Также, стоит отметить, что мы беспокоимся о наших моделях, предоставляя им надёжную защиту и полную конфиденциальность. Нашей задачей является помочь девушкам легко и безопасно заработать много денег.</p>
             </div>
@@ -196,7 +196,7 @@
                         <img src="img/icon/clients.svg" alt="">
                         <span>СОСТОЯТЕЛЬНЫЕ КЛИЕНТЫ</span>
                         <div class="about-us-hr left"></div>
-                        <p>У нас очень большая база состоятельных клиентов, которые достойны твоего внимания и являются настоящими джентельмаенами.</p>
+                        <p>У нас очень большая база состоятельных клиентов, которые достойны твоего внимания и являются настоящими джентльменами.</p>
                     </div>
                     <div class="about-us-box box_right">
                         <img src="img/icon/money.svg" alt="">
