--- a/advantages.html
+++ b/advantages.html
@@ -187,7 +187,7 @@
                         <div class="why-header2 d-none d-sm-block">ЕЖЕДНЕВНЫЕ<br>ВЫПЛАТЫ</div>
                         <div class="why-header2 d-block d-sm-none">Ежедневные выплаты</div>
                         <div class="why-box-hr"></div>
-                        <p>Иметь живые деньги каждый день очень удобно, не так ли? А мы предоставляем такую возможность, что бы у наших сотрудниц не возникало финаносых трудносей.</p>
+                        <p>Иметь живые деньги каждый день очень удобно, не так ли? А мы предоставляем такую возможность, что бы у наших сотрудниц не возникало финансовых трудностей.</p>
                     </div>
                     <div class="why-box">
                         <div class="why-header3 d-none d-sm-block">СВОБОДНЫЙ ГРАФИК</div>
@@ -216,7 +216,7 @@
                         <div class="why-header3 d-none d-sm-block">КОНФИДЕНЦИАЛЬНОСТЬ</div>
                         <div class="why-header3 d-block d-sm-none">Конфиденциальность</div>
                         <div class="why-box-hr"></div>
-                        <p>Мы не предоставляем никаких данных третим лицами. Можно спать спокойно, вся информация о моделях засеркечена и надёжно защищена.</p>
+                        <p>Мы не предоставляем никаких данных третьим лицами. Можно спать спокойно, вся информация о моделях засекречена и надёжно защищена.</p>
                     </div>
                 </div>
             </div>
