--- a/faq.html
+++ b/faq.html
@@ -191,8 +191,8 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    Работа в эскорт агентстве — это сопровождение состоятельных мужчин на различных мероприятиях. Встречи с успешными и влиятельными людьми, представителями собственного бизнеса, медиа и спорт элиты. Также у мужчин часто возникает желаниеросто отдохнуть или
-                                    повеселиться, а наше агентство уже подбирает для них желанную спутницу.
+                                    Работа в эскорт агентстве — это сопровождение состоятельных мужчин на различных мероприятиях. Встречи с успешными и влиятельными людьми, представителями собственного бизнеса, медиа и спорт элиты. Также у мужчин часто возникает желание просто отдохнуть
+                                    или повеселиться, а наше агентство уже подбирает для них желанную спутницу.
                                 </div>
                             </div>
                         </div>
